@@ -8,3 +8,4 @@
 
 - fix title in queue, fix overlapping issue in song results -- kaneryu on 2025-01-23
 - fix bug where seeking would cause the play button to show buffering indef -- kaneryu on 2025-01-24
+- song duration not updating -- kaneryu on 2025-01-24
