@@ -1,13 +1,14 @@
-![Innertune Desktop Word logo](https://files.catbox.moe/inyqo4.png)
+![Innertune Desktop banner](https://files.catbox.moe/inyqo4.png)
+### This app is not ready to use !
+
 # InnerTuneDesktop
-A desktop version of the popular InnerTune music player for mobile devices.
+A desktop music player compliant with InnerTune mobile backups.
 The desktop application will allow loading of mobile backups, which means you can keep your liked songs, downloaded songs, custom lyrics and song names, and everything else.
 It will also come with a few new features, like a smarter reccomendation engine, while still keeping the exported backups backwards compatible.
 In the future, there may be an ability for your mobile Inntertune to sync with InnerTuneDestkop, leading to a more cohesive experience, but that's still in the works.
 
 ## Release Date
-Soon™. I'll be giving more updates on development in the future, but right now I'm still designing the desktop app while working on the backend youtube music api intergration. I'll start working on the most difficult part, the UI coding later on. All in all, this sets a semi-likely beta release to around September of this year.
+Soon™.
 
 ## Platforms
 I'm targeting all desktop platforms (Linux, MacOS, Windows), although most likely only Windows will be available at the beta launch.
-The android app for InnerTune is already available! Check it out [here.](https://github.com/z-huang/InnerTune)
